--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "./dist/use_reactga.d.ts",
   "repository": "git@github.com:alexanderjeurissen/use-reactga.git",
   "author": "Alexander Jeurissen <1220084+alexanderjeurissen@users.noreply.github.com>",
-  "license": "GNU General Public License v3.0",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/alexanderjeurissen/use-reactga/issues"
   },
